# AI_Career_Helper

./: .gitignore  CHECKLIST.md  CODE_REFERENCE.md  COMPLETION_REPORT.md  DATA_INTEGRATION_SUMMARY.md  FILE_CHANGES.md  FINAL_CHECKLIST.md  FINAL_REPORT.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  README.md  README_REFACTOR.md  REFACTOR_SUMMARY.md  START_HERE.md  START_HERE_ASCII.txt  TECH_DEFENSE.md  TESTING_GUIDE.md  ai_advisor.py  ai_advisor_test.py  api_prefix_setup_report.txt  api_router_setup_complete.txt  app.py  app_vue_984_986_fix.txt  app_vue_syntax_check.txt  backend_405_fix.txt  backend_cors_fix_report.md  backend_cors_update_report.md  backend_database_connection_fix_report.md  backend_duplicate_app_fix_report.md  backend_import_fix_report.md  backend_routes_verification.txt  backend_service_verification.txt  backend_start_guide.txt  database_encoding_error_fix.md  database_refactoring_summary.md  db_ssl_health_check_update.md  docker-compose.yml  final_config_report.txt  fix_config.py  frontend_404_fix_complete.txt  (+32 more)
ai-career-helper-backend/: README.md  main.py  requirements.txt
ai-career-helper-frontend/: package-lock.json  vite.config.js  修复部署问题指南.md
ai-career-helper-resume-doctor/: README.md  ai_advisor.py  requirements.txt
backend/: Dockerfile  README_DB.md  database_config_analysis.md  db_config.py  db_config_env_patch.diff  debug_resume_history.py  fix_resume_history_charset.sql  init_db.py  jobs.csv  main copy.py  main.py  query_tencent_db_ports.py  requirements.txt  start_backend.bat  test_db_connection.py  test_db_connection_fixed.py  users.csv  (+3 more)
(+79 files in other folders)
