[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pymysql>=1.1.0",
    "python-multipart>=0.0.6",
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
]
